Fix: remove 'jquery.event.drag.js' from base_panels.mako; Paired collection creator: allow single/multiple pairs to be re-ordered by drag and drop

--- a/static/style/src/less/ui/paired-collection-creator.less
+++ b/static/style/src/less/ui/paired-collection-creator.less
@@ -374,6 +374,22 @@
                 background: #DEDEDE;
             }
         }
+        .paired-drop-placeholder {
+            width   : 60px;
+            height  : 3px;
+            margin : 2px 0px 0px 14px;
+            background : black;
+            &:before {
+                float: left;
+                font-size: 120%;
+                margin: -9px 0px 0px -8px;
+                font-family: FontAwesome;
+                content: '\f0da';
+            }
+            &:last-child {
+                margin-bottom: 8px;
+            }
+        }
         .empty-message {
             text-align: center;
         }
