ToolForm: Adjust textarea element

--- a/static/style/src/less/ui.less
+++ b/static/style/src/less/ui.less
@@ -76,6 +76,11 @@
     &:extend(.form-control);
 }
 
+.ui-textarea {
+    &:extend(.form-control);
+    height: 100px !important;
+}
+
 .ui-tabs {
     .ui-tabs-add {
         font-size       : 0.8em;
