--- a/static/style/src/less/ui.less
+++ b/static/style/src/less/ui.less
@@ -32,6 +32,7 @@
 
 .ui-table-form-info {
     &:extend(.toolParamHelp);
+    clear: both !important;
 }
 
 .ui-table-form-separator {
@@ -208,4 +209,10 @@
         border-radius: 0;
         -webkit-appearance: none;
     }
+}
+
+.ui-select-multiple {
+    &:extend(.ui-select);
+    height: 100% !important;
+    width: 100% !important;
 }
