--- a/static/style/src/less/collections.less
+++ b/static/style/src/less/collections.less
@@ -58,7 +58,7 @@
             color: #777;
         }
     }
-    .datasets-list {
+    .list-items {
         margin-top: 8px;
         .dataset-collection-element {
             border-width: 1px 0px 0px 0px;
@@ -68,16 +68,3 @@
         }
     }
 }
-
-//============================================================================= collection inside history panel
-.history-panel .dataset-collection {
-    .subtitle {
-        margin-top: 2px;
-        font-size: 90%;
-        color: #777;
-    }
-}
-
-//============================================================================= collection panel inside history panel
-//.history-panel .dataset-collection-panel {
-//}
