--- a/static/style/src/less/embed_item.less
+++ b/static/style/src/less/embed_item.less
@@ -66,7 +66,7 @@
     overflow: hidden;
 }
 
-.embedded-item .title {
+.embedded-item > .title {
     vertical-align: top;
     text-align: center;
     font-weight: bold;
