ToolForm: Implements error handling, applies fixes to styles and structure, UI: Fixes code style for frames

--- a/static/style/src/less/ui.less
+++ b/static/style/src/less/ui.less
@@ -1,3 +1,17 @@
+.ui-table-row-error {
+    -moz-border-radius: @border-radius-base;
+    border-radius: @border-radius-base;
+    background: @state-danger-bg;
+    padding: 5px;
+}
+
+.ui-table-form-error {
+    display: none;
+    .ui-table-form-error-text  {
+        padding-left: 5px;
+    }
+}
+
 .ui-form-slider {
     .ui-form-slider-text {
         &:extend(.form-control);
