--- a/static/style/blue/base.css
+++ b/static/style/blue/base.css
@@ -1644,7 +1644,9 @@ div.permissionContainer{padding-left:20px}
 .list-item{border:1px solid #bfbfbf}.list-item .vertical-spacing{margin-bottom:8px}
 .list-item .info-section{border-radius:3px;border:1px solid rgba(153,153,153,0.30000000000000004);padding:4px}
 .list-item .padded{padding:6px 10px 6px 8px}
-.list-item .warnings [class$=messagesmall]{margin:6px 10px 2px 8px;font-size:90%}
+.list-item .warnings:not(:empty){padding-top:4px}
+.list-item .warnings [class$=messagesmall]{margin:6px 10px 2px 8px;font-size:90%}.list-item .warnings [class$=messagesmall]:first-child{margin-top:0px}
+.list-item .warnings [class$=messagesmall]:last-child{margin-bottom:0px}
 .list-item .help-text{font-weight:normal;color:#555}
 .list-item .selector{float:left;display:none;width:32px;height:32px;margin:0 0 -6px 0;padding:8px 0 2px 7px;font-size:80%;color:#333;cursor:pointer;vertical-align:middle}
 .list-item .selector:hover{color:maroon}
@@ -1654,7 +1656,7 @@ div.permissionContainer{padding-left:20px}
 .list-item .primary-actions .icon-btn:last-child{margin-left:0px;border-radius:0px 3px 3px 0px}
 .list-item .primary-actions .icon-btn:only-child{margin:0px;border-radius:3px}
 .list-item .primary-actions .icon-btn{margin-left:2px}
-.list-item .details{display:none;padding:0 10px 6px 8px}.list-item .details [class$=messagesmall]{margin:0px 0px 8px 0px}
+.list-item .details{display:none;padding:0 10px 6px 8px}.list-item .details>[class$=messagesmall]{margin:0px 0px 8px 0px}
 .list-item .details label{margin:0px;padding:0px;font-weight:normal}
 .list-item .details .prompt{font-weight:normal;color:#555}
 .list-item .details .prompt:after{content:':';margin-right:4px}
@@ -1679,6 +1681,8 @@ div.permissionContainer{padding-left:20px}
 .list-panel .controls .list-actions .btn{padding-top:2px;padding-bottom:2px;font-size:90%}
 .list-panel .list-items .list-item:not(:last-child){border-bottom-width:0px}
 .list-panel .empty-message{display:none;margin:0px}
+.list-item .details .list-panel{margin-top:8px;border-radius:3px;background:white;padding:4px}.list-item .details .list-panel .list-items{border:1px solid #bfbfbf;border-radius:3px}.list-item .details .list-panel .list-items .list-item:first-child{border-top-width:0px;border-radius:3px 3px 0px 0px}
+.list-item .details .list-panel .list-items .list-item:last-child{border-bottom-width:0px;border-radius:0px 0px 3px 3px}
 .search-input .search-query{width:100%;padding-right:24px}
 .search-input .search-clear,.search-input .search-loading{position:relative;display:inline-block;float:right;margin-top:-24px;margin-right:4px;font-size:1.4em;line-height:23px;color:grey}
 .search-input .search-clear:hover{color:#303030}
@@ -1760,10 +1764,11 @@ div.permissionContainer{padding-left:20px}
 .annotated-history-panel table.list-items .headers th{padding:8px}
 .annotated-history-panel table.list-items>tbody>tr{cursor:pointer;border-bottom:1px solid grey}.annotated-history-panel table.list-items>tbody>tr>td{margin:0px;padding:0px;vertical-align:top}.annotated-history-panel table.list-items>tbody>tr>td:nth-child(1){width:50%}
 .annotated-history-panel table.list-items>tbody>tr>td:nth-child(2){padding:8px 16px 8px 16px;white-space:pre-wrap}
-.annotated-history-panel table.list-items>tbody>tr .list-item{border:0px}
+.annotated-history-panel table.list-items>tbody>tr>td>.list-item{border:0px}
 .annotated-history-panel .empty-message{margin-top:8px}
 .history-panel .dataset-collection .subtitle{margin-top:2px;font-size:90%;color:#777}
 .history-panel .dataset-collection-panel .controls{padding:0px}
+.history-panel .dataset-collection-panel .list-items{margin-top:0px}
 body.historyPage{background:#dfe5f9;color:#000;margin:5px;border:0;padding:0}
 div.historyLinks{margin:5px 5px}
 div.historyItem{margin:0 -5px;padding:8px 10px;border-top:solid #bfbfbf 1px;border-right:none;word-wrap:break-word;background:#eee}div.historyItem .state-icon{display:inline-block;vertical-align:middle;width:16px;height:16px;background-position:0 1px;background-repeat:no-repeat}
