Ui: Unify checkboxes and radio buttons, extend functionality, Upload: Fix code style, ToolForm: Extend dataset filtering

--- a/static/style/src/less/ui.less
+++ b/static/style/src/less/ui.less
@@ -1,4 +1,4 @@
-.ui-table-row-error {
+.ui-error {
     -moz-border-radius: @border-radius-base;
     border-radius: @border-radius-base;
     background: @state-danger-bg;
