Ui: Fix checkbox border

--- a/static/style/src/less/ui.less
+++ b/static/style/src/less/ui.less
@@ -5,6 +5,11 @@
     padding: 5px;
 }
 
+.ui-checkbox {
+    &:extend(.form-control);
+    height: 100% !important;
+}
+
 .ui-table-form-error {
     display: none;
     .ui-table-form-error-text  {
