ToolForm: Fix style

--- a/static/style/src/less/ui.less
+++ b/static/style/src/less/ui.less
@@ -226,8 +226,8 @@
     border-radius: 5px;
     .portlet-header {
         background: @form-heading-bg;
-        border-top-right-radius: 3px;
-        border-bottom-right-radius: 3px;
+        border-radius: 3px;
+        border-bottom-left-radius: 0px;
         padding: 1px 0px 0px 2px;
     }
 
